--- a/local/html_route/dashboard_template.html
+++ b/local/html_route/dashboard_template.html
@@ -21,7 +21,7 @@
   <light ng-repeat="light in dashboard.allLights" linfo="light"></light>
   <thermostat ng-repeat="thermo in dashboard.allThermos" tinfo="thermo"></thermostat>
   <shutter ng-repeat="shutter in dashboard.allShutters" shinfo="shutter"></shutter>
-  <remote ng-repeat="cRemote in dashboard.allTVcustomRemotes" crinfo="cRemote"></remote>
+  <remote ng-repeat="cRemote in dashboard.allTvRemotes" crinfo="cRemote"></remote>
 </div>
 
 <div class="display-devices-row">
