--- a/local/index.html
+++ b/local/index.html
@@ -73,6 +73,7 @@
   <!-- controllers !-->
   <script defer src="js/controllers/NHomeCtrl.js"></script>
   <script defer src="js/controllers/AllRoomCtrl.js"></script>
+  <script defer src="js/controllers/FavoritesCtrl.js"></script>
   <script defer src="js/controllers/DashboardCtrl.js"></script>
   <script defer src="js/controllers/DeviceCtrl.js"></script>
   <script defer src="js/controllers/ScenesCtrl.js"></script>
