--- a/local/directive/devices/light.html
+++ b/local/directive/devices/light.html
@@ -1,6 +1,6 @@
 <div class="device-wrap">
   <span class="device-add-to-favorites">
-    <input type="checkbox" id="add-to-favorites-{{linfo.id}}" ng-model="linfo.favorites" ng-chnage="toggleAddToFavorites(linfo.favorites, linfo.id)">
+    <input type="checkbox" id="add-to-favorites-{{linfo.id}}" ng-model="linfo.favorites" ng-change="toggleAddToFavorites(linfo.favorites, linfo.id)">
     <label for="add-to-favorites-{{linfo.id}}" class="device-add-to-favorites-label" title="add to favorites"></label>
   </span>
   <div class="device-blacklisted" ng-show="linfo.blacklisted">
