--- a/local/index.html
+++ b/local/index.html
@@ -61,19 +61,21 @@
 
 
   <!-- ng module, ui router logic -->
-  <script src="js/app.js"></script>
-  <script src="js/services.js"></script>
+  <script defer src="js/app.js"></script>
+  <script defer src="js/services.js"></script>
 
   <!-- HTTPS request/ socektIO setup -->
-  <script src="js/factory/socket.js"></script>
+  <script defer src="js/factory/socket.js"></script>
 
   <!-- services shared among controlelrs and directives !-->
-  <script src="js/service/dataService.js"></script>
+  <script defer src="js/service/dataService.js"></script>
 
   <!-- controllers !-->
   <script defer src="js/controllers/NHomeCtrl.js"></script>
   <script defer src="js/controllers/AllRoomCtrl.js"></script>
   <script defer src="js/controllers/FavoritesCtrl.js"></script>
+  <script defer src="js/controllers/MostUsedCtrl.js"></script>
+  <script defer src="js/controllers/RecentlyUsedCtrl.js"></script>
   <script defer src="js/controllers/DashboardCtrl.js"></script>
   <script defer src="js/controllers/DeviceCtrl.js"></script>
   <script defer src="js/controllers/ScenesCtrl.js"></script>
@@ -82,15 +84,15 @@
   <script defer src="js/controllers/SettingsServerCtrl.js"></script>
 
   <!-- single devices !-->
-  <script src="js/devices/light.js"></script>
-  <script src="js/devices/switch.js"></script>
-  <script src="js/devices/remote.js"></script>
-  <script src="js/devices/scene.js"></script>
-  <script src="js/devices/schedule.js"></script>
-  <script src="js/devices/alarm.js"></script>
-  <script src="js/devices/camera.js"></script>
-  <script src="js/devices/sensor.js"></script>
-  <script src="js/service/googleMaps.js"></script>
+  <script defer src="js/devices/light.js"></script>
+  <script defer src="js/devices/switch.js"></script>
+  <script defer src="js/devices/remote.js"></script>
+  <script defer src="js/devices/scene.js"></script>
+  <script defer src="js/devices/schedule.js"></script>
+  <script defer src="js/devices/alarm.js"></script>
+  <script defer src="js/devices/camera.js"></script>
+  <script defer src="js/devices/sensor.js"></script>
+  <script defer src="js/service/googleMaps.js"></script>
   <!--
   <script src="js/devices/thermostat.js"></script>
   <script src="js/devices/shutter.js"></script>
@@ -98,9 +100,9 @@
   !-->
 
   <!-- Scene and Schedule devices !-->
-  <script src="js/devices/scene-schedule/scene-schedule-switch.js"></script>
-  <script src="js/devices/scene-schedule/scene-schedule-light.js"></script>
-  <script src="js/devices/scene-schedule/scene-schedule-TvRemote.js"></script>
+  <script defer src="js/devices/scene-schedule/scene-schedule-switch.js"></script>
+  <script defer src="js/devices/scene-schedule/scene-schedule-light.js"></script>
+  <script defer src="js/devices/scene-schedule/scene-schedule-TvRemote.js"></script>
 </body>
 
 </html>
