--- a/local/html_route/security_template.html
+++ b/local/html_route/security_template.html
@@ -2,18 +2,15 @@
   <div class="template-nav-toggle">
     <h3 class="template-nav-toggle-btn" id="surveilance" ng-click="alarmToggle = false">Surveilance</h3>
     <h3 class="template-nav-toggle-btn" id="alarms" ng-click="alarmToggle = true">Alarms</h3>
-    <div class="active-line-indicator"></div>
+    <div class="active-line-indicator" ng-class="{'alarm-active': alarmToggle}"></div>
   </div>
 </div>
 
-
 <div class="display-devices-row" ng-hide="alarmToggle === true">
-
   <camera ng-repeat="camera in security.allCameras" cinfo="camera"></camera>
 </div>
 
 <div class="display-devices-row" ng-show="alarmToggle">
-
   <alarm ng-repeat="sensorAlarm in security.allSensors" ainfo="sensorAlarm" ng-click="security.toggleAddSensor(sensorAlarm.id)"></alarm>
 </div>
 
