--- a/local/html_route/devices_template.html
+++ b/local/html_route/devices_template.html
@@ -62,7 +62,7 @@
   <hr>
   <div class="row display-devices-row" id="remotes">
 
-    <remote ng-repeat="cRemote in device.allTvRemotes track by cRemote.id" crinfo="cRemote" ng-click="device.editDevice(cRemote)"></remote>
+    <remote ng-repeat="cRemote in device.allTvRemotes track by cRemote.id" tvinfo="cRemote" ng-click="device.editDevice(cRemote)"></remote>
   </div>
 </section>
 <!-- show all cameras !-->
