--- a/local/html_route/scenes_template.html
+++ b/local/html_route/scenes_template.html
@@ -14,10 +14,10 @@
   <div class="new-scene-info">
     <h3>Add Scene</h3>
     <div>
-      <button type="reset" class="button settings-cancel-btn" form="new-scene-form" ng-click="scene.cancelSchedule()">
+      <button type="reset" class="button orange-btn" form="new-scene-form" ng-click="scene.cancelSchedule()">
         Cancel
       </button>
-      <button type="submit" class="button settings-save-btn" form="new-scene-form">
+      <button type="submit" class="button blue-btn" form="new-scene-form">
         Done
       </button>
     </div>
