--- a/local/directive/devices/light.html
+++ b/local/directive/devices/light.html
@@ -3,6 +3,7 @@
     <input type="checkbox" id="add-to-favorites-{{linfo.id}}" ng-model="linfo.favorites" ng-change="toggleAddToFavorites(linfo.favorites, linfo.id)">
     <label for="add-to-favorites-{{linfo.id}}" class="device-add-to-favorites-label" title="add to favorites"></label>
   </span>
+  <img ng-src="img/button/schedule.svg" class="device-schedule-btn" ng-click="deviceSchedule = !deviceSchedule" title="quick schedule">
   <div class="device-blacklisted" ng-show="linfo.blacklisted">
     <button type="button" name="unblacklist" title="unblacklist device" class="button unblacklist-btn" ng-click="unblacklistDev(linfo.id)">Device locked</button>
   </div>
@@ -16,7 +17,7 @@
   </div>
 
   <!-- display ON/OFF switch !-->
-  <div class="device-footer">
+  <div class="device-footer" ng-hide="deviceSchedule">
     <div class="device-footer-btn-wrap">
       <button class="device-btn" ng-class="{'device-btn-active': linfo.state.on}" ng-click="lightOn(linfo.id, linfo.state.on)">On</button>
       <button class="device-btn" ng-class="{'device-btn-active': !linfo.state.on}" ng-click="lightOff(linfo.id, linfo.state.on)">Off</button>
@@ -50,6 +51,32 @@
     </div>
     <div>
       <button class="device-options-btn set-color-btn" ng-click="setBrightness(linfo.id, linfo.state.level)">Set brightness</button>
+    </div>
+  </div>
+
+  <!-- schedule !-->
+  <div class="option-wrap" ng-show="deviceSchedule">
+    <button type="reset" class="close-device-options close-form-btn" ng-click="deviceSchedule = false">
+    </button>
+    <form class="add-schedule-dev-form" id="dev-schedule-form-{{linfo.id}}" ng-submit="quickSchedule(linfo, scheduleState)">
+      <p>Device will turn
+        <span class="color-blue" ng-if="scheduleState">ON</span>
+        <span class="color-orange" ng-if="!scheduleState">OFF</span>
+        at:
+      </p>
+      <input type="number" class="form-number" id="device-schedule-hours-{{linfo.id}}" placeholder="Hours" min="0" max="23" required ng-blur="checkHours($event)">
+      <input type="number" class="form-number" id="device-schedule-minutes-{{linfo.id}}" placeholder="Minutes" min="0" max="59" required ng-blur="checkMinutes($event)">
+      <small ng-if="scheduleSuccess" class="color-green pop-up">Scheduled!</small>
+    </form>
+
+    <div class="device-footer devices-schedule-footer">
+      <div class="device-footer-btn-wrap">
+        <button type="button" class="device-btn" ng-class="{'device-btn-active': scheduleState}" ng-click="scheduleState = true">On</button>
+        <button type="button" class="device-btn" ng-class="{'device-btn-active': !scheduleState}" ng-click="scheduleState = false">Off</button>
+      </div>
+      <div class="device-footer-option-wrap">
+      <button type="submit" class="device-options-btn" form="dev-schedule-form-{{linfo.id}}">Schedule</button>
+    </div>
     </div>
   </div>
 </div>
