--- a/local/html_route/all_rooms_template.html
+++ b/local/html_route/all_rooms_template.html
@@ -1,20 +1,81 @@
-<div ng-repeat="category in allRooms.categories" id="{{category.id}}">
-  <div class="template-nav">
-    <div class="display-devices-row">
-      <h3>{{category.name}}</h3>
+<div class="all-rooms-nav">
+  <!-- favorites sensors !-->
+  <div class="favorites-sensors-wrap">
+    <div class="info-sensor" ng-repeat="sensor in allRooms.favoriteSensors track by sensor.id">
+      <img ng-if="sensor.subtype === 'temperature'" src="img/sensors/temp.png">
+      <img ng-if="sensor.subtype === 'humidity'" src="img/sensors/humidity.png">
+      <img ng-if="sensor.subtype === 'co2'" src="img/sensors/co.png">
+      <img ng-if="sensor.subtype === 'noise'" src="img/sensors/noise.png">
+      <img ng-if="sensor.subtype === 'rain'" src="img/sensors/rain.png">
+      <img ng-if="sensor.subtype === 'co-alarm'" src="img/sensors/co.png">
+      <img ng-if="sensor.subtype === 'light'" src="img/sensors/lux.png">
+      <img ng-if="sensor.subtype === 'motion'" src="img/sensors/motion.png">
+      <img ng-if="sensor.subtype === 'door' && sensor.value === false" src="img/sensors/door-close.png">
+      <img ng-if="sensor.subtype === 'door' && sensor.value === true" src="img/sensors/door-open.png">
+      <div class="sensor-details">
+        <h1>{{sensor.value}}</h1>
+        <p>{{sensor.name}}</p>
+      </div>
     </div>
-    <div class="horizontal-line"></div>
   </div>
-  <div class="display-devices-row">
-    <switch ng-repeat="switch in allRooms.switch[category.id] track by switch.id" sinfo="switch"></switch>
-    <light ng-repeat="light in allRooms.light[category.id] track by light.id" linfo="light"></light>
-    <thermostat ng-repeat="thermo in allRooms.thermo[category.id] track by thermo.id" tinfo="thermo"></thermostat>
-    <shutter ng-repeat="shutter in allRooms.shutter[category.id] track by shutter.id" shinfo="shutter"></shutter>
-    <remote ng-repeat="cRemote in allRooms.tvRemote[category.id] track by cRemote.id" crinfo="cRemote"></remote>
-  </div>
+  <!-- room quick select !-->
+  <div class="category-wrap">
+    <small class="color-transparent">Jump to</small>
+    <div class="dropdown">
+      <button type="button" class="button dropdown-toggle category-dropdown" id="categories-dropdown" data-toggle="dropdown">
+        {{allRooms.activeRoom.name}}
+      </button>
 
-  <div class="display-devices-row">
-    <camera ng-repeat="camera in allRooms.camera[category.id] track by camera.id" cinfo="camera"></camera>
+      <ul class="dropdown-menu category-dropdown-list" role="menu" aria-labelledby="categories-dropdown">
+        <li role="presentation" ng-repeat="category in allRooms.categories track by category.id">
+          <a role="menuitem" tabindex="-1" href="#" ng-click="allRooms.jumpToRoom(category)">{{category.name}}</a>
+        </li>
+      </ul>
+    </div>
+  </div>
+</div>
+
+<div class="all-rooms-view-point">
+  <div ng-repeat="category in allRooms.categories" id="{{category.id}}">
+    <div class="template-nav">
+      <h3>{{category.name}}</h3>
+      <div class="horizontal-line"></div>
+    </div>
+
+    <!-- sensors !-->
+    <div class="sensor-wrap">
+      <div class="info-sensor" ng-repeat="sensor in allRooms.sensor[category.id] track by sensor.id">
+        <img ng-if="sensor.subtype === 'temperature'" src="img/sensors/temp.png">
+        <img ng-if="sensor.subtype === 'humidity'" src="img/sensors/humidity.png">
+        <img ng-if="sensor.subtype === 'co2'" src="img/sensors/co.png">
+        <img ng-if="sensor.subtype === 'noise'" src="img/sensors/noise.png">
+        <img ng-if="sensor.subtype === 'rain'" src="img/sensors/rain.png">
+        <img ng-if="sensor.subtype === 'co-alarm'" src="img/sensors/co.png">
+        <img ng-if="sensor.subtype === 'light'" src="img/sensors/lux.png">
+        <img ng-if="sensor.subtype === 'motion'" src="img/sensors/motion.png">
+        <img ng-if="sensor.subtype === 'door' && sensor.value === false" src="img/sensors/door-close.png">
+        <img ng-if="sensor.subtype === 'door' && sensor.value === true" src="img/sensors/door-open.png">
+        <div class="sensor-details">
+          <h1>{{sensor.value}}</h1>
+          <p>{{sensor.name}}</p>
+        </div>
+      </div>
+      <small class="color-transparent" ng-show="allRooms.sensor[category.id].length === 0">
+        You don't have sensors in this room. Go <a ui-sref="frame.devices">assign</a>
+      </small>
+    </div>
+    <!-- rest of devices !-->
+    <div class="display-devices-row">
+      <switch ng-repeat="switch in allRooms.switch[category.id] track by switch.id" sinfo="switch"></switch>
+      <light ng-repeat="light in allRooms.light[category.id] track by light.id" linfo="light"></light>
+      <thermostat ng-repeat="thermo in allRooms.thermo[category.id] track by thermo.id" tinfo="thermo"></thermostat>
+      <shutter ng-repeat="shutter in allRooms.shutter[category.id] track by shutter.id" shinfo="shutter"></shutter>
+      <remote ng-repeat="cRemote in allRooms.tvRemote[category.id] track by cRemote.id" tvinfo="cRemote"></remote>
+    </div>
+
+    <div class="display-devices-row">
+      <camera ng-repeat="camera in allRooms.camera[category.id] track by camera.id" cinfo="camera"></camera>
+    </div>
   </div>
 </div>
 
